--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                         <li><i class="fas fa-book"></i> Kho kiến thức hiện có</li>
                         <li><i class="fas fa-sync"></i> Cập nhật mới (1 năm)</li>
                     </ul>
-                    <a href="https://khoahocmall.com/checkout/?add-to-cart=10960" class="v2-btn v2-btn-basic" style="text-align: center; display: block; text-decoration: none;">Đăng Ký</a>
+                    <a href="https://khoahocmall.com/checkout/?add-to-cart=10960" target="_blank" class="v2-btn v2-btn-basic" style="text-align: center; display: block; text-decoration: none;">Đăng Ký</a>
                 </div>
 
                 <div class="v2-card popular">
@@ -491,7 +491,7 @@
                         <li><i class="fas fa-gift"></i> Full quyền lợi update</li>
                         <li style="color:red"><i class="fas fa-clock"></i> Hạn chót: 31/12/2025</li>
                     </ul>
-                    <a href="https://khoahocmall.com/checkout/?add-to-cart=12488" class="v2-btn v2-btn-vip" style="text-align: center; display: block; text-decoration: none;">🔥ĐĂNG KÝ NGAY🔥</a>
+                    <a href="https://khoahocmall.com/checkout/?add-to-cart=12488" target="_blank" class="v2-btn v2-btn-vip" style="text-align: center; display: block; text-decoration: none;">🔥ĐĂNG KÝ NGAY🔥</a>
                 </div>
 
                 <div class="v2-card">
@@ -503,7 +503,7 @@
                         <li><i class="fas fa-book"></i> Kho kiến thức hiện có</li>
                         <li><i class="fas fa-sync"></i> Cập nhật mới trọn đời</li>
                     </ul>
-                    <a href="https://khoahocmall.com/checkout/?add-to-cart=11703" class="v2-btn v2-btn-basic" style="text-align: center; display: block; text-decoration: none;">Đăng Ký</a>
+                    <a href="https://khoahocmall.com/checkout/?add-to-cart=11703" target="_blank" class="v2-btn v2-btn-basic" style="text-align: center; display: block; text-decoration: none;">Đăng Ký</a>
                 </div>
             </div>
 
@@ -557,9 +557,9 @@
                         </tr>
                         <tr style="background-color: #f8fbff;">
                             <td style="font-weight: bold;"><i class="fas fa-paper-plane feature-icon"></i>Đăng Ký</td>
-                            <td><a href="https://khoahocmall.com/checkout/?add-to-cart=10960" class="btn-table btn-basic">Đăng Ký</a></td>
-                            <td><a href="https://khoahocmall.com/checkout/?add-to-cart=11703" class="btn-table btn-basic">Đăng Ký</a></td>
-                            <td><a href="https://khoahocmall.com/checkout/?add-to-cart=12488" class="btn-table btn-vip"><i class="fas fa-bolt"></i> CHỐT NGAY</a></td>
+                            <td><a href="https://khoahocmall.com/checkout/?add-to-cart=10960" target="_blank" class="btn-table btn-basic">Đăng Ký</a></td>
+                            <td><a href="https://khoahocmall.com/checkout/?add-to-cart=11703" target="_blank" class="btn-table btn-basic">Đăng Ký</a></td>
+                            <td><a href="https://khoahocmall.com/checkout/?add-to-cart=12488" target="_blank" class="btn-table btn-vip"><i class="fas fa-bolt"></i> CHỐT NGAY</a></td>
                         </tr>
                     </tbody>
                 </table>
