--- a/index.html
+++ b/index.html
@@ -517,10 +517,10 @@
                     <div class="v2-price">333K<span>/người</span></div>
                     <div class="v2-period" style="color: #0066ff; font-weight:bold;">Sở hữu Vĩnh Viễn</div>
                     <ul class="v2-features">
-                        <li><i class="fas fa-users"></i> <strong>03 Tài khoản riêng biệt</strong></li>
+                        <li><i class="fas fa-users"></i> <strong>Ghép nhóm tự động (tối đa 3 người)</strong></li>
                         <li><i class="fas fa-lock"></i> Riêng tư tuyệt đối</li>
                         <li><i class="fas fa-infinity"></i> Học trọn đời</li>
-                        <li><i class="fas fa-gift"></i> Full quyền lợi update</li>
+                        <li><i class="fas fa-gift"></i> Full quyền lợi như gói 999K</li>
                         <li style="color:red"><i class="fas fa-clock"></i> Hạn chót: 31/12/2025</li>
                     </ul>
                     <a href="https://khoahocmall.com/checkout/?add-to-cart=12488" target="_blank" class="v2-btn v2-btn-vip" style="text-align: center; display: block; text-decoration: none;">🔥ĐĂNG KÝ NGAY🔥</a>
@@ -615,3 +615,4 @@
 
 </body>
 </html>
+
